Mobile Overflow-X Fix 2

--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,10 @@ body {
     --light2: #ece1c9;
 
     overflow-x: hidden;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 
     position: relative;
 }
